resources/hpc: use Files.readString()